--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,55 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    
+  <head>
     <title>main page</title>
     <script>
-        function validateForm(){
-            var name=document.getElementById('name').value;
-            var StudentNumber=document.getElementById('number').value;
-            var Major=document.getElementById('major').value;
-            var email_id=document.getElementById('email_id').value;
-            var email_addr=document.getElementById('email_addr').value;
+      function validateForm() {
+        var name = document.getElementById("name").value;
+        var StudentNumber = document.getElementById("number").value;
+        var Major = document.getElementById("major").value;
+        var email_id = document.getElementById("email_id").value;
+        var email_addr = document.getElementById("email_addr").value;
 
-            if (!name|| !StudentNumber || !Major || !email_id|| !email_addr){
-                alert('필수 정보를 다 입력해주세요!');
-                return false;
-            }
-            return true;
+        if (!name || !StudentNumber || !Major || !email_id || !email_addr) {
+          alert("필수 정보를 다 입력해주세요!");
+          return false;
         }
-    </script>
-</head>
-<body>
-    <form action='/result' method="POST" onsubmit="return validateForm()">
-        
-        <p><b>* Name</b> <input type="text" id='name'name="name"/> </p>
-        <p><b>* Student Number </b><input type="text" id='number' name="number"> </p>
-        <p><b> * Major </b><input type="text" id='major' name ="major"/></p>
-        <p>
-            <b> * Email </b> <input type="email_id" id='email_id' name ="email_id"/>
-            @
-            <select id='email_addr' name='email_addr'>
-                <option value="naver.com">naver.com</option>
-                <option value="gmail.com">gmail.com</option>
-                <option value="hanmail.net">hanmail.net</option>
-                <option value="nate.com">nate.com</option>
-            </select>
-        </p>
-        <p>
-            Gender<br><br>
-            <input type="radio" name="gender" value="Male"> Male
-            <input type="radio" name="gender" value="Female"> Female 
-         </p>
 
-        <p>
-            Programming Languages<br><br>
-            <input type = 'checkbox' name = 'chkbox' value="Python"/>Python
-            <input type = 'checkbox' name = 'chkbox' value="Java"/>Java
-            <input type = 'checkbox' name = 'chkbox' value="HTML"/>HTML
-            <input type = 'checkbox' name = 'chkbox' value="C++"/>C++
-        </p>
-        
-        <p><button type = "submit" value = "submit"/>submit</button></p>
+        return true;
+      }
+    </script>
+  </head>
+  <body>
+    <!-- /result api에 대한 POST 전송 -->
+    <form action="/result" method="POST" onsubmit="return validateForm()">
+      <p><b>* Name</b> <input type="'text" id="name" name="name" /></p>
+
+      <p>
+        <b>* Student Number </b><input type="text" id="number" name="number" />
+      </p>
+
+      <p><b> * Major </b><input type="text" id="major" name="major" /></p>
+
+      <p>
+        <b> * Email </b> <input type="email_id" id="email_id" name="email_id" />
+        @
+        <select id="email_addr" name="email_addr">
+          <!-- drop down list -->
+          <option value="naver.com">naver.com</option>
+          <option value="gmail.com">gmail.com</option>
+          <option value="hanmail.net">hanmail.net</option>
+          <option value="nate.com">nate.com</option>
+        </select>
+      </p>
+
+      <p>
+        Gender
+        <br />
+        <br />
+        <!-- Gender radio button -->
+        <input type="radio" name="gender" value="Male" /> Male
+        <input type="radio" name="gender" value="Female" /> Female
+      </p>
+
+      <p>
+        Programming Language
+        <br />
+        <br />
+        <!-- Programming Language Checkbox -->
+        <input type="checkbox" name="chkbox" value="Python" />Python
+        <input type="checkbox" name="chkbox" value="Java" />Java
+        <input type="checkbox" name="chkbox" value="HTML" />HTML
+        <input type="checkbox" name="chkbox" value="C++" />C++
+      </p>
+
+      <!-- Submit button -->
+      <p><button type="submit" value="submit">submit</button></p>
     </form>
-</body>
+  </body>
 </html>
